# BloggerEasy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/samples/html/: about_page.html  blog_index_cards_page.html  changelog.html  changelog_feed.html  changelog_page.html  changelog_timeline_page.html  colorful-cards.html  contact_card.html  contact_form_page.html  contact_page.html  cookbook_week.html  creative_portfolio_grid.html  dark-modern.html  docs_blog.html  docs_hub_page.html  docs_knowledge_base.html  editorial_magazine.html  event_landing.html  event_schedule.html  events_page.html  (+34 more)
docs/: BOUNTY.md  ROADMAP.md  XML_IMPORT_CHECKLIST.md  blogger-xml-import-checklist.md  image-palette-theme-colors-polish.md  template-list-tags-filter.md  theming.md  validate-strict-schema-mode.md
scripts/: create-bounties.mjs
src/bloggereasy/: __init__.py  cli.py  config.py
templates/: about_team_grid_team_cards_html.html  blog_magazine_cards_html_fixture_screenshot.html  contact_form_static_page_html_fixture.html  docs_sidebar_toc_documentation_layout_html.html  landing_hero_cta_html_fixture.html
tests/: test_api.py  test_bundle.py  test_cli_url.py  test_css_extract.py  test_image_palette_regions.py  test_landing_template.py  test_parse.py  test_preview.py  test_responsive_css.py  test_roundtrip_colors.py  test_sdk.py  test_seo_defaults.py  test_theme.py  test_theme_docs.py  test_theme_food_recipe.py  test_theme_magazine_news.py  test_theme_pack.py  test_theme_portfolio_photo.py  test_theme_snapshots.py  test_validate.py
(+19 files in other folders)
