[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloggereasy"
version = "0.3.10"
description = "BloggerEasy: generate usable Blogger XML themes from HTML pages, URLs, or design images"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MergeOS / ThanhTrucSolutions" }]
keywords = ["blogger", "theme", "xml", "html", "generator", "blog", "gui"]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
gui = [
  "PySide6>=6.6",
  "Pillow>=10.0",
]
vision = [
  "Pillow>=10.0",
  "numpy>=1.26",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
]

[project.scripts]
bloggereasy = "bloggereasy.cli:app"
bloggereasy-gui = "bloggereasy.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
